--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -8,5 +8,11 @@
 
   "ConnectionStrings": {
     "myConn": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=PostSubmissionFeedback;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+  },
+  "Jwt": {
+    "Key": "MyNameIsJhonCopperWorkWithProjectPostSeminarFeedback",
+    "Issuer": "InventoryAuthenticationServer",
+    "Audience": "InventoryservicePostmantClient",
+    "Subject": "InventoryServiceAccessToken"
   }
 }
